src/Test/Fixtures/Good/Arrays/bitArrayDeclaration.lf
let bits: [bit; 3] = [1, 0, 1];