src/Test/Fixtures/Bad/Arrays/missingElementTypeInArrayDeclaration.lf
let ints: [; 3] = [1, 2, 3];